Set wtpversion=1.0 for org.apache.maven.plugins:maven-eclipse-plugin plugin

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@ opennms.home = ${opennms.home}
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <wtpversion>1.0</wtpversion>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
           <execution>
