Upgraded to Spring 2.0 (springremoting in version 2.0 supports httpclient-3.0.1); xmlrpc-2.0.1 (no longer depends on httpclient-2.0.2 or any httpclient version); added httpclient-3.0.1 dependency for http collector code and http notifier

--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -70,6 +70,10 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.sf.jradius</groupId>
       <artifactId>jradius-client</artifactId>
       <scope>compile</scope>
