--- a/opennms-install/pom.xml
+++ b/opennms-install/pom.xml
@@ -47,13 +47,19 @@
     <!-- OpenNMS dependencies -->
     <dependency>
       <groupId>org.opennms</groupId>
-      <artifactId>opennms-icmp-api</artifactId>
-      <scope>compile</scope>
+      <artifactId>opennms-dao</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
-      <artifactId>opennms-services</artifactId>
+      <artifactId>opennms-dao</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-icmp-api</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
@@ -70,12 +76,6 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-mock</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>postgresql</groupId>
