--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
     <module>opennms-import</module>
     <module>opennms-reporting</module>
     <module>opennms-webstart</module>
+    <module>opennms-remote-poller</module>
     <module>opennms-webapp</module>
     <module>opennms-daemon</module>
     <module>opennms-doc</module>
