Add a type parameter to all of the response time graphs.  The new graphing code expects it to be there for all prefabricated graphs.

--- a/opennms-daemon/src/main/filtered/etc/response-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/response-graph.properties
@@ -31,6 +31,7 @@ reports=icmp, dhcp, dns, http, http-8000, http-8080, pop3, radius, smtp, ssh, jb
  
 report.jboss.name=JBoss
 report.jboss.columns=jboss
+report.jboss.type=responseTime
 report.jboss.command=--title="JBoss Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:jboss:AVERAGE \
@@ -43,6 +44,7 @@ report.jboss.command=--title="JBoss Response Time" \
 
 report.icmp.name=ICMP
 report.icmp.columns=icmp
+report.icmp.type=responseTime
 report.icmp.command=--title="ICMP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMicro={rrd1}:icmp:AVERAGE \
@@ -54,6 +56,7 @@ report.icmp.command=--title="ICMP Response Time" \
 
 report.dhcp.name=DHCP
 report.dhcp.columns=dhcp
+report.dhcp.type=responseTime
 report.dhcp.command=--title="DHCP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:dhcp:AVERAGE \
@@ -65,6 +68,7 @@ report.dhcp.command=--title="DHCP Response Time" \
 
 report.dns.name=DNS
 report.dns.columns=dns
+report.dns.type=responseTime
 report.dns.command=--title="DNS Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:dns:AVERAGE \
@@ -76,6 +80,7 @@ report.dns.command=--title="DNS Response Time" \
 
 report.http.name=HTTP
 report.http.columns=http
+report.http.type=responseTime
 report.http.command=--title="HTTP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:http:AVERAGE \
@@ -87,6 +92,7 @@ report.http.command=--title="HTTP Response Time" \
 
 report.http-8000.name=HTTP-8000
 report.http-8000.columns=http-8000
+report.http-8000.type=responseTime
 report.http-8000.command=--title="HTTP-8000 Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:http-8000:AVERAGE \
@@ -98,6 +104,7 @@ report.http-8000.command=--title="HTTP-8000 Response Time" \
 
 report.http-8080.name=HTTP-8080
 report.http-8080.columns=http-8080
+report.http-8080.type=responseTime
 report.http-8080.command=--title="HTTP-8080 Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:http-8080:AVERAGE \
@@ -109,6 +116,7 @@ report.http-8080.command=--title="HTTP-8080 Response Time" \
 
 report.pop3.name=POP3
 report.pop3.columns=pop3
+report.pop3.type=responseTime
 report.pop3.command=--title="POP3 Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:pop3:AVERAGE \
@@ -120,6 +128,7 @@ report.pop3.command=--title="POP3 Response Time" \
 
 report.radius.name=RADIUS
 report.radius.columns=radiusauth
+report.radius.type=responseTime
 report.radius.command=--title="RADIUS Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:ssh:AVERAGE \
@@ -131,6 +140,7 @@ report.radius.command=--title="RADIUS Response Time" \
 
 report.smtp.name=SMTP
 report.smtp.columns=smtp
+report.smtp.type=responseTime
 report.smtp.command=--title="SMTP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:smtp:AVERAGE \
@@ -142,6 +152,7 @@ report.smtp.command=--title="SMTP Response Time" \
 
 report.ssh.name=SSH
 report.ssh.columns=ssh
+report.ssh.type=responseTime
 report.ssh.command=--title="SSH Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:ssh:AVERAGE \
