changed name for bg images valle_daosta and emilia_romagna

--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -182,7 +182,7 @@ bgimage.abruzzo.filename=abruzzo.jpg
 bgimage.basilicata.filename=basilicata.jpg
 bgimage.calabria.filename=calabria.jpg
 bgimage.campania.filename=campania.jpg
-bgimage.emilia romagna.filename=emilia romagna.jpg
+bgimage.emilia romagna.filename=emilia_romagna.jpg
 bgimage.friuli.filename=friuli.jpg
 bgimage.lazio.filename=lazio.jpg
 bgimage.liguria.filename=liguria.jpg
@@ -196,7 +196,7 @@ bgimage.sardegna.filename=sardegna.jpg
 bgimage.trentino.filename=trentino.jpg
 bgimage.toscana.filename=toscana.jpg
 bgimage.umbria.filename=umbria.jpg
-bgimage.valle d'aosta.filename=valle d'aosta.jpg
+bgimage.valle d'aosta.filename=valle_daosta.jpg
 bgimage.veneto.filename=veneto.jpg
 
 
