application editing form start

--- a/opennms-import/.settings/org.eclipse.jdt.core.prefs
+++ b/opennms-import/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Aug 08 07:47:32 CDT 2006
+#Thu Oct 26 21:00:14 EDT 2006
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.source=1.5
