--- a/opennms-webstart/.settings/org.eclipse.jdt.core.prefs
+++ b/opennms-webstart/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Thu Oct 26 21:00:15 EDT 2006
+#Mon Oct 30 18:56:39 EST 2006
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.source=1.5
