--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -134,5 +134,11 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-qosdaemon</artifactId>
+      <version>1.3.2-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
