--- a/opennms-daemon/src/main/filtered/etc/response-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/response-graph.properties
@@ -22,7 +22,7 @@ output.mime=image/png
 #########################################################################
 
 #report keys, list ALL prefab reports here!
-reports=icmp, dhcp, dns, http, http-8000, http-8080, pop3, radius, smtp, ssh, jboss
+reports=icmp, avail, dhcp, dns, http, http-8000, http-8080, pop3, radius, smtp, ssh, jboss
 
 # values available to prefab reports:
 # {rrd1}, {rrd2}, {rrd3}, ...  must match the datasources exactly
@@ -49,6 +49,18 @@ report.icmp.command=--title="ICMP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMicro={rrd1}:icmp:AVERAGE \
  CDEF:rt=rtMicro,1000000,/ \
+ LINE1:rt#0000ff:"Response Time" \
+ GPRINT:rt:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:rt:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:rt:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.avail.name=Availability
+report.avail.columns=avail
+report.avail.type=responseTime
+report.avail.command=--title="Availablity Response Time" \
+ --vertical-label="Seconds" \
+ DEF:rtMills={rrd1}:avail:AVERAGE \
+ CDEF:rt=rtMills,1000,/ \
  LINE1:rt#0000ff:"Response Time" \
  GPRINT:rt:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:rt:MIN:"Min  \\: %8.2lf %s" \
