added configuration documentation for qosdaemon

--- a/opennms-daemon/src/main/resources/contrib/qosdaemon/qos_example_configuration/opennms/log4j.properties
+++ b/opennms-daemon/src/main/resources/contrib/qosdaemon/qos_example_configuration/opennms/log4j.properties
@@ -338,7 +338,7 @@ log4j.appender.MAP.layout=org.apache.log4j.PatternLayout
 log4j.appender.MAP.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # QoS daemon server
-log4j.category.OpenOSS.QoSD=DEBUG, QOSD
+log4j.category.OpenOSS.QoSD=INFO, QOSD
 log4j.additivity.OpenOSS.QoSD=false
 log4j.appender.QOSD=org.apache.log4j.RollingFileAppender
 log4j.appender.QOSD.MaxFileSize=10MB
@@ -348,7 +348,7 @@ log4j.appender.QOSD.layout=org.apache.log4j.PatternLayout
 log4j.appender.QOSD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # QoSrx daemon server
-log4j.category.OpenOSS.QoSDrx=DEBUG, QOSDRX
+log4j.category.OpenOSS.QoSDrx=INFO, QOSDRX
 log4j.additivity.OpenOSS.QoSDrx=false
 log4j.appender.QOSDRX=org.apache.log4j.RollingFileAppender
 log4j.appender.QOSDRX.MaxFileSize=10MB
