--- a/pom.xml
+++ b/pom.xml
@@ -576,32 +576,6 @@ opennms.home = ${opennms.home}
         <build.postgresql.include.dir>/usr/include/postgresql</build.postgresql.include.dir>
       </properties>
     </profile>
-
-    <profile>
-      <id>ubuntu-postgres8.0</id>
-      <activation>
-        <file>
-          <exists>/usr/lib/postgresql/8.0</exists>
-        </file>
-      </activation>
-  
-      <properties>
-        <build.postgresql.lib.dir>/usr/lib/postgresql/8.0/lib</build.postgresql.lib.dir>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>ubuntu-postgres8.1</id>
-      <activation>
-        <file>
-          <exists>/usr/lib/postgresql/8.1</exists>
-        </file>
-      </activation>
-  
-      <properties>
-        <build.postgresql.lib.dir>/usr/lib/postgresql/8.1/lib</build.postgresql.lib.dir>
-      </properties>
-    </profile>
   
     <profile>
       <id>slackware</id>
@@ -615,11 +589,9 @@ opennms.home = ${opennms.home}
         <platform>linux</platform>
         <platform.shlib>so</platform.shlib>
         <platform.jni>so</platform.jni>
-        <opennms.home>/usr/local/OpenNMS</opennms.home>
         <build.rrd.include.dir>/usr/local/rrdtool-1.2.12/include</build.rrd.include.dir>
         <build.rrd.lib.dir>/usr/local/rrdtool-1.2.12/lib</build.rrd.lib.dir>
         <build.postgresql.include.dir>/usr/local/pgsql/include/server</build.postgresql.include.dir>
-        <build.postgresql.lib.dir>/usr/local/pgsql/lib</build.postgresql.lib.dir>
       </properties>
     </profile>
 
@@ -634,8 +606,26 @@ opennms.home = ${opennms.home}
     	<platform>solaris</platform>
 	<platform.shlib>so</platform.shlib>
 	<platform.jni>so</platform.jni>
-	<opennms.home>/opt/OpenNMS</opennms.home>
 	<build.jni.compiler.arg>-I${JAVA_HOME}/include -I${JAVA_HOME}/include/solaris</build.jni.compiler.arg>
+      </properties>
+    </profile>
+
+    <!--
+         This is for the PostgreSQL package that ships with Solaris 10
+         Update 2 and later.  See this for more information:
+
+         http://www.sun.com/software/solaris/howtoguides/postgresqlhowto.jsp
+      -->
+    <profile>
+      <id>solaris-system-postgresql</id>
+      <activation>
+      	<file>
+	  <exists>/var/sadm/pkg/SUNWpostgr-devel/pkginfo</exists>
+	</file>
+      </activation>
+
+      <properties>
+	<build.postgresql.include.dir>/usr/include/pgsql/server</build.postgresql.include.dir>
       </properties>
     </profile>
 
@@ -649,12 +639,11 @@ opennms.home = ${opennms.home}
 
       <properties>
 	<build.postgresql.include.dir>/usr/local/pgsql/include/server</build.postgresql.include.dir>
-	<build.postgresql.lib.dir>/usr/local/pgsql/lib</build.postgresql.lib.dir>
       </properties>
     </profile>
 
     <profile>
-      <id>solaris-postgres8-rrdtool1.0.49</id>
+      <id>solaris-local-rrdtool1.0.49</id>
       <activation>
       	<file>
 	  <exists>/usr/local/rrdtool-1.0.49</exists>
@@ -664,6 +653,27 @@ opennms.home = ${opennms.home}
       <properties>
 	<build.rrd.include.dir>/usr/local/rrdtool-1.0.49/include</build.rrd.include.dir>
 	<build.rrd.lib.dir>/usr/local/rrdtool-1.0.49/lib</build.rrd.lib.dir>
+      </properties>
+    </profile>
+
+    <!--
+         This is for the rrdtool package from Blastwave.org.
+         See this for more information:
+
+         http://www.blastwave.org/packages.php/rrdtool
+      -->
+    <profile>
+      <id>solaris-blastwave-rrdtool</id>
+      <activation>
+      	<file>
+	  <exists>/var/sadm/pkg/CSWrrd/pkginfo</exists>
+	</file>
+      </activation>
+
+      <properties>
+        <install.rrdtool.bin>/opt/csw/bin/rrdtool</install.rrdtool.bin>
+	<build.rrd.include.dir>/opt/csw/include</build.rrd.include.dir>
+	<build.rrd.lib.dir>/opt/csw/lib</build.rrd.lib.dir>
       </properties>
     </profile>
 
@@ -684,13 +694,11 @@ opennms.home = ${opennms.home}
         <platform>freebsd</platform>
         <platform.shlib>so</platform.shlib>
         <platform.jni>so</platform.jni>
-        <opennms.home>/usr/local/OpenNMS</opennms.home>
 	<build.jni.compiler.arg>-I${JAVA_HOME}/include -I${JAVA_HOME}/include/freebsd</build.jni.compiler.arg>
         <build.rrd.include.dir>/usr/local/include</build.rrd.include.dir>
         <build.rrd.lib.dir>/usr/local/lib</build.rrd.lib.dir>
 	<build.postgresql.compiler.arg>-I/usr/local/include</build.postgresql.compiler.arg>
         <build.postgresql.include.dir>/usr/local/include/postgresql/server</build.postgresql.include.dir>
-        <build.postgresql.lib.dir>/usr/local/lib</build.postgresql.lib.dir>
       </properties>
     </profile>
 
