--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-freebsd/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-jni/opennms-rrdtool-jni-freebsd/pom.xml
@@ -39,7 +39,7 @@
             </source>
           </sources>
           <linkerStartOptions>
-            <linkerStartOption>-shared ${build.jni.compiler.arg} ${build.jni.linker.arg} -L${build.rrd.lib.dir} -lc</linkerStartOption>
+            <linkerStartOption>-shared ${build.jni.compiler.arg} ${build.jni.linker.arg} -L${build.rrd.lib.dir} -lrrd -lc</linkerStartOption>
           </linkerStartOptions>
         </configuration>
       </plugin>
