Added new width and height options to the large graphs in snmp-graph.properties.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -2131,6 +2131,8 @@ report.netsnmp.cpuRaw.command=--title="CPU Use" \
 report.netsnmp.cpuStats.name=CPU Statistics
 report.netsnmp.cpuStats.columns=loadavg1,loadavg5,loadavg15,CpuRawUser,CpuRawSystem,CpuRawIdle,CpuRawNice
 report.netsnmp.cpuStats.type=node
+report.netsnmp.cpuStats.width=565
+report.netsnmp.cpuStats.height=200
 report.netsnmp.cpuStats.command=--title="CPU Statistics" \
  --units-exponent 0 \
  --width 565 \
@@ -2425,6 +2427,8 @@ report.netsnmp.loadavg.command=--title="Load Average" \
 report.netsnmp.memStats.name=System Memory Stats
 report.netsnmp.memStats.columns=memAvailSwap,memTotalReal,memAvailReal,memBuffer,memCached,memShared
 report.netsnmp.memStats.type=node
+report.netsnmp.cpuStats.width=565
+report.netsnmp.cpuStats.height=200
 report.netsnmp.memStats.command=--title="System Memory Stats" \
  --width 565 \
  --height 200 \
