Ooops. Cut and Paste error.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -2427,8 +2427,8 @@ report.netsnmp.loadavg.command=--title="Load Average" \
 report.netsnmp.memStats.name=System Memory Stats
 report.netsnmp.memStats.columns=memAvailSwap,memTotalReal,memAvailReal,memBuffer,memCached,memShared
 report.netsnmp.memStats.type=node
-report.netsnmp.cpuStats.width=565
-report.netsnmp.cpuStats.height=200
+report.netsnmp.memStats.width=565
+report.netsnmp.memStats.height=200
 report.netsnmp.memStats.command=--title="System Memory Stats" \
  --width 565 \
  --height 200 \
