--- a/opennms-webapp/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/opennms-webapp/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -30,13 +30,12 @@
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
-log4j.appender.MOCK=org.opennms.netmgt.mock.MockLogAppender
-log4j.appender.MOCK.layout=org.apache.log4j.PatternLayout
-log4j.appender.MOCK.layout.ConversionPattern=%-5p [%t] %c: %m%n
 
 log4j.rootCategory=DEBUG, CONSOLE
 
 log4j.logger.org.apache.commons.digester.Digester=INFO
+log4j.logger.org.apache.catalina=INFO
+log4j.logger.org.apache.jasper=INFO
 log4j.logger.org.acegisecurity=INFO
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
