--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -7,7 +7,7 @@
 #the input files (RRDs) must be in this directory
 command.input.dir=@install.share.dir@/rrd/snmp/
 
-command.prefix=@install.rrdtool.bin@ graph - --imgformat PNG --start {startTime} --end {endTime}
+command.prefix=@install.rrdtool.bin@ graph - --imgformat PNG  --font DEFAULT:7 --font TITLE:10 --start {startTime} --end {endTime}
 
 #the command used to get the RRD info
 info.command=@install.rrdtool.bin@ info
