--- a/tools/packages/opennms/opennms.spec.in
+++ b/tools/packages/opennms/opennms.spec.in
@@ -220,7 +220,7 @@ BuildRoot:		%{_tmppath}/%{name}-%{version}-root
 
 AutoReqProv:		no
 
-Requires:		rrdtool >= 1.2, curl, %{requires}
+Requires:		rrdtool >= 1.2, %{requires}
 
 %description
 OpenNMS is an enterprise-grade network management package.
