Add a StoreRequestProperitesFilter filter that stores HttpServlerRequest properties (in particular servletPath) in configurable request attributes. This is to solve a problem where we don't have easy access to the original request servletPath in JSPs that are the view for Spring MVC pages.  It is available in another property, javax.servlet.forward.servlet_path, but this is only set if a forward is made, and it does not work if multiple forwards are done. Configure the StoreRequsetProperties filter in web.xml and have it store the servletPath, minus the leading "/" (hence the relative part) in relativeRequestPath. It can be fetched in JSP pages using ${requestScope.relativeRequestPath}.

--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -93,6 +93,17 @@
   </filter>
   
   <filter>
+    <description>Stroes HTTP request parameters in request attributes for later access</description>
+    <filter-name>StoreRequestProperties</filter-name>
+    <filter-class>org.opennms.web.StoreRequestPropertiesFilter</filter-class>
+    <init-param>
+      <description>Into which request attribute the value of HttpServletRequest.getServletPath() is stored</description>
+      <param-name>relativeServletPathAttribute</param-name>
+      <param-value>relativeRequestPath</param-value>
+    </init-param>
+  </filter>
+  
+  <filter>
     <filter-name>eXtremeExport</filter-name>
     <filter-class>org.extremecomponents.table.filter.ExportFilter</filter-class>
   </filter>
@@ -100,6 +111,11 @@
 
   <filter-mapping>
     <filter-name>Acegi Filter Chain Proxy</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+    <filter-name>StoreRequestProperties</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
