Put the hrStorageDescr in the graph title

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -591,14 +591,11 @@ report.mib2printer.powerOnCount.command=--title="Total Pages Printed Since Being
  GPRINT:val1:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:val1:MAX:"Max  \\: %8.2lf %s\\n"
 
-; We don't yet support propertiesValues for graphing... soon
-;report.mib2.storage.usage.propertiesValues=hrStorageDescr
-;report.mib2.storage.usage.command=--title="Disk Space Drive {hrDescDisk2}"
-
 report.mib2.storage.usage.name=Storage Utilization (MIB-2 Host Resources)
 report.mib2.storage.usage.columns=hrStorageSize, hrStorageUsed, hrStorageAllocUnits
+report.mib2.storage.usage.propertiesValues=hrStorageDescr
 report.mib2.storage.usage.type=hrStorageIndex
-report.mib2.storage.usage.command=--title="Storage Utilization" \
+report.mib2.storage.usage.command=--title="Storage Utilization on {hrStorageDescr}" \
  --vertical-label="Bytes" \
  DEF:total={rrd1}:hrStorageSize:AVERAGE \
  DEF:used={rrd2}:hrStorageUsed:AVERAGE \
