In bug 1590 it was suggested to add waitstates and interrupts to the data collection and snmp-graph.properties.  Thanks for the patch tmueko@kommunity.net (Tom Müko)!

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -85,6 +85,7 @@ sinf.exchange-is.vmfreeblks, sinf.exchange-is.users, \
 sun.cpuTime, sun.diskxfer, sun.interrupts, sun.packets, sun.paging, sun.procs, \
 sun.swap, sun.swapping, \
 netsnmp.memStats, \
+netsnmp.cpuUsage, \
 netsnmp.cpuStats, \
 free.memory,jvm.thread.count,jvm.thread.daemon,jvm.thread.peak, jboss.http.tp, jboss.defaultDS, \
 jboss.servletstatus.time, jboss.servletstatus.cnt, jboss.grp.tp, jboss.grp.time, jboss.grp.cnt, \
@@ -2197,6 +2198,47 @@ report.netsnmp.cpuStats.command=--title="CPU Statistics" \
  COMMENT:"\\n" \
  COMMENT:" " \
  LINE1:float15#000000:"15 minutes\\n"
+
+report.netsnmp.cpuUsage.name=CPU Usage
+report.netsnmp.cpuUsage.columns=CpuRawInterrupt,CpuRawUser,CpuRawWait,CpuRawNice,CpuRawSystem,CpuRawKernel
+report.netsnmp.cpuUsage.type=node
+report.netsnmp.cpuUsage.command=--title="CPU Usage" \
+ --width 565 \
+ --height 200 \
+ --upper-limit 100 \
+ -l 0 \
+ DEF:cpuinterrupt=CpuRawInterrupt.rrd:CpuRawInterrupt:AVERAGE \
+ DEF:cpuuser=CpuRawUser.rrd:CpuRawUser:AVERAGE \
+ DEF:cpuwait=CpuRawWait.rrd:CpuRawWait:AVERAGE \
+ DEF:cpunice=CpuRawNice.rrd:CpuRawNice:AVERAGE \
+ DEF:cpusystem=CpuRawSystem.rrd:CpuRawSystem:AVERAGE \
+ DEF:cpukernel=CpuRawKernel.rrd:CpuRawKernel:AVERAGE \
+ CDEF:interrupt=cpuinterrupt \
+ CDEF:system=cpusystem,interrupt,+ \
+ CDEF:wait=cpuwait,system,+ \
+ CDEF:nice=cpunice,wait,+ \
+ CDEF:user=cpuuser,nice,+ \
+ AREA:user#0000ff:"User      " \
+ GPRINT:user:AVERAGE:"  Avg  \\: %8.2lf %s" \
+ GPRINT:user:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:user:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:nice#00aa00:"Nice	   	 " \
+ GPRINT:nice:AVERAGE:"    Avg  \\: %8.2lf %s" \
+ GPRINT:nice:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:nice:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:wait#ffff00:"Wait      " \
+ GPRINT:wait:AVERAGE:"  Avg  \\: %8.2lf %s" \
+ GPRINT:wait:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:wait:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:system#00ffff:"System      " \
+ GPRINT:system:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:system:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:system:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:interrupt#ff0000:"Interrupts" \
+ GPRINT:interrupt:AVERAGE:"  Avg  \\: %8.2lf %s" \
+ GPRINT:interrupt:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:interrupt:MAX:"Max  \\: %8.2lf %s\\n"
+
 
 report.netsnmp.disk1.name=Disk Space on 1 
 report.netsnmp.disk1.columns=ns-disk-1-tot, ns-disk-1-used
