make JRobin and SNMP4J default.. Also add opennms.properties for setting global properties

--- a/opennms-daemon/src/main/filtered/etc/rrd-configuration.properties
+++ b/opennms-daemon/src/main/filtered/etc/rrd-configuration.properties
@@ -14,11 +14,23 @@
 # pure java implementation of RrdTool.  Its class name is 
 # org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
 #
-# To switch to the JRobin implementation uncomment the following line:
-#org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
-#
-# The default setting is org.opennms.netmgt.rrd.rrdtool.JniRrdStrategy
+# To switch to the JNI implementation uncomment the following line:
 #org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.rrdtool.JniRrdStrategy
+#
+# The default setting is org.opennms.netmgt.rrd.rrdtool.JRobinRrdStrategy
+#org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
+
+#
+# This property allows the definition of a custom file extension to use for data files.
+# OpenNMS uses the extension to find which files to use.  The jrobin convertor tool will
+# append .jrb to the filenames for the new files it creates.  This property will allow the 
+# use of these new files by setting the extension to .rrd.jrb
+#
+# The default fileExtension is approperiate for the Strategy in use... JRobin uses .jrb and 
+# JNI uses .rrd.  If you set a value here that value will be used regardless of the value preferred
+# by the individual strategies.
+#org.opennms.rrd.fileExtension=.jrb
+
 
 #
 # This property defines whether or not to use the write queuing system.  
@@ -152,9 +164,3 @@
 #org.opennms.rrd.queuing.writethread.sleepTime=50
 #org.opennms.rrd.queuing.writethread.exitDelay=60000
 
-#
-# This property allows the definition of a custom file extension to use for data files.
-# OpenNMS uses the extension to find which files to use.  The jrobin convertor tool will
-# append .jrb to the filenames for the new files it creates.  This property will allow the 
-# use of these new files by setting the extension to .rrd.jrb
-#org.opennms.rrd.fileExtension=.rrd
