sigh.. one more fix

--- a/opennms-services/src/test/test-configurations/PollerBackEndIntegrationTest/etc/rrd-configuration.properties
+++ b/opennms-services/src/test/test-configurations/PollerBackEndIntegrationTest/etc/rrd-configuration.properties
@@ -157,4 +157,4 @@ org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
 # OpenNMS uses the extension to find which files to use.  The jrobin convertor tool will
 # append .jrb to the filenames for the new files it creates.  This property will allow the 
 # use of these new files by setting the extension to .rrd.jrb
-#org.opennms.rrd.fileExtension=.rrd
+org.opennms.rrd.fileExtension=.rrd
